--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
+	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.2.2'
 }
 
 tasks.named('test') {
