--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=prueba.tecnica
+
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=prueba
+spring.datasource.password=pruebapass
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
