--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,19 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.postgresql:postgresql'
-	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
-	implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.2.2'
+	//implementation 'org.springframework.boot:spring-boot-starter-web'
+	//compileOnly 'org.projectlombok:lombok'
+	//runtimeOnly 'org.postgresql:postgresql'
+	//annotationProcessor 'org.projectlombok:lombok'
+	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
+	//implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.2.2'
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
 }
 
 tasks.named('test') {
