--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//implementation 'org.springframework.boot:spring-boot-starter-web'
+    testImplementation 'junit:junit:4.13.1'
+    //implementation 'org.springframework.boot:spring-boot-starter-web'
 	//compileOnly 'org.projectlombok:lombok'
 	//runtimeOnly 'org.postgresql:postgresql'
 	//annotationProcessor 'org.projectlombok:lombok'
