--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,22 @@ repositories {
 }
 
 dependencies {
+	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//implementation 'org.springframework.boot:spring-boot-starter-web'
+	//implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    //testImplementation 'junit:junit:4.13.1'
+	//runtimeOnly 'com.h2database:h2'
+	//implementation 'org.hibernate:hibernate-core:5.6.10.Final'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'junit:junit:4.13.1'
+	testImplementation 'junit:junit:4.13.1'
+	runtimeOnly 'com.h2database:h2'
+
+
     //implementation 'org.springframework.boot:spring-boot-starter-web'
 	//compileOnly 'org.projectlombok:lombok'
 	//runtimeOnly 'org.postgresql:postgresql'
@@ -35,7 +46,7 @@ dependencies {
 	//implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
 	//implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.2.2'
 	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.h2database:h2'
+
 }
 
 tasks.named('test') {
