--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 	testImplementation 'junit:junit:4.13.1'
 	runtimeOnly 'com.h2database:h2'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'com.auth0:java-jwt:4.3.0'
+
 
     //implementation 'org.springframework.boot:spring-boot-starter-web'
 	//compileOnly 'org.projectlombok:lombok'
