--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'jacoco'
 	id 'org.springframework.boot' version '3.2.4'
 	id 'io.spring.dependency-management' version '1.1.4'
 }
@@ -22,36 +23,42 @@ repositories {
 }
 
 dependencies {
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-web'
-	//implementation 'org.springframework.boot:spring-boot-starter-validation'
-	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    //testImplementation 'junit:junit:4.13.1'
-	//runtimeOnly 'com.h2database:h2'
-	//implementation 'org.hibernate:hibernate-core:5.6.10.Final'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'junit:junit:4.13.1'
+	testImplementation 'org.mockito:mockito-core'
 	runtimeOnly 'com.h2database:h2'
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'com.auth0:java-jwt:4.3.0'
 
-
-    //implementation 'org.springframework.boot:spring-boot-starter-web'
-	//compileOnly 'org.projectlombok:lombok'
-	//runtimeOnly 'org.postgresql:postgresql'
-	//annotationProcessor 'org.projectlombok:lombok'
-	//testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	//implementation 'jakarta.persistence:jakarta.persistence-api:3.0.0'
-	//implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.2.2'
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
 }
 
-tasks.named('test') {
+
+test {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
+}
+jacocoTestReport {
+
+	afterEvaluate {
+		// Excluir directorios específicos de los informes de cobertura
+		classDirectories = files(classDirectories.files.collect {
+			fileTree(dir: it,
+					exclude: [
+							'**/com/quind/prueba/tecnica/Application.java',
+							'**/com/quind/prueba/tecnica/config**',
+							'**/com/quind/prueba/tecnica/domain/model/enums**',
+							'**/com/quind/prueba/tecnica/domain/model/models**',
+							'**/com/quind/prueba/tecnica/domain/model/ports**',
+							'**/com/quind/prueba/tecnica/infrastructure/api**',
+							'**/com/quind/prueba/tecnica/infrastructure/db**',
+							'**/com/quind/prueba/tecnica/infrastructure/exception**',
+							'**/com/quind/prueba/tecnica/domain/model/utils/ISpecificationTask.java'
+					])
+		})
+	}
 }
